fix y scroll on iPhone 13 mini screen

--- a/styles.css
+++ b/styles.css
@@ -152,7 +152,6 @@ p {
   body,
   .container {
     overflow-x: hidden;
-    overflow-y: hidden;
   }
 
   .button {
